force-app/main/default/objects/Cuentas_Colectivas__c/Cuentas_Colectivas__c.object-meta.xml
<CustomObject>
    <label>Cuentas Colectivas</label>
    <nameField>
        <label>Nombre de Cuentas Colectivas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cuentas Colectivas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>