force-app/main/default/objects/Cuentas_Colectivas__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Codigo</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>