force-app/main/default/objects/Cuentas_Colectivas__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas Colectivas</relationshipLabel>
    <relationshipName>Cuentas_Colectivas</relationshipName>
    <type>Lookup</type>
</CustomField>