force-app/main/default/objects/Cuentas_Colectivas__c/fields/Tipo_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cuenta__c</fullName>
    <label>Tipo Cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voluntarias</fullName>
            </value>
            <value>
                <fullName>Censatías</fullName>
            </value>
            <value>
                <fullName>Pilar Complementario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>